--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "astro": "astro"
   },
   "dependencies": {
@@ -15,5 +17,8 @@
     "astro": "^4.6.3",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
